画像を掲載

--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
     <p>本シミュレータはyoshi様(Twitter<a href="https://twitter.com/rk113">@rk113</a>)に許可をいただき、<a
         href="https://r113.sakura.ne.jp/p/hasshahyo/seibu-ikebukuro/index.html">西武
         日本信号24ドット(所沢を除く池袋線各駅、下山口、西武球場前ほか)</a>をベースに改造したものです</p>
-<ul>
-    <li>元町・中華街行きは、「元町・中華街」→「渋谷・横浜方面」→「Motomachi-Chukagai」というように「渋谷・横浜方面」も途中で表示されますが、ここでは対応していません。</li>
-    <li>本シミュレーターはJavaScript・CSS等が正常に動作するブラウザでご覧いただけます。JavaScriptが動作しない環境では動きません。</li>
-</ul>
+    <ul>
+        <li>元町・中華街行きは、「元町・中華街」→「渋谷・横浜方面」→「Motomachi-Chukagai」というように「渋谷・横浜方面」も途中で表示されますが、ここでは対応していません。</li>
+        <li>本シミュレーターはJavaScript・CSS等が正常に動作するブラウザでご覧いただけます。JavaScriptが動作しない環境では動きません。</li>
+    </ul>
+    <figure>
+        <figcaption>使用している画像素材</figcaption>
+        <img src="/resource/img/main.png" alt="表示画像の素材集" style="border:1px solid gray; padding: 3px;">
+    </figure>
 </section>
 </main>
 <footer>
