「つぎ」「そのつぎ」ラベルを削除
FIXME title-0.png, title-1.png の修正

--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
         <div id="LEDUnitDiv">
             <div style="position:relative; top:0; left:0; height:178px; width:1050px;">
                 <!-- 1台め -->
-                <div style="position:absolute; top:20px; left:20px; width:550px;">
+                <div style="position:absolute; top:20px; left:20px; width:469px;">
                     <div id="kyotaiMainDiv0" style="position:absolute; ">
-                        <div style="position:absolute; top:0; left:0; width:500px; height:146px; background-color:#777; ">
-                            <!-- 方面ラベル --><img style="position:absolute; top:0; left:0; width:500px; height:43px;" src="/resource/img/label/title-0.png" alt="" />
-                            <div style="position:absolute; top:43px; left:11px; width:479px; height:95px; background-color:#222;">
-                                <!-- 項目名ラベル --><img style='position:absolute; top:0; left:81px; width:384px; height:14px; ' src='/resource/img/label/header.png' alt='' />
-                                <img style='position:absolute; top:14px; left:0; width:81px; height:96px; ' src='/resource/img/label/order.png' alt='' />
+                        <div style="position:absolute; top:0; left:0; width:419px; height:146px; background-color:#777; ">
+                            <!-- 方面ラベル --><img style="position:absolute; top:0; left:0; width:419px; height:43px;" src="/resource/img/label/title-0.png" alt="" />
+                            <div style="position:absolute; top:43px; left:11px; width:398px; height:95px; background-color:#222;">
+                                <!-- 項目名ラベル --><img style='position:absolute; top:0; left:0; width:384px; height:14px; ' src='/resource/img/label/header.png' alt='' />
                                 <!-- LED描画部 -->
-                                <div id="mainLEDDiv0" style="position:absolute; top:14px; left:81px; width:384px; height:72px; background-color:#000;">
-                                    <div style="position:absolute; top:0; left:0; width:384px; height:72px; background-color:#000;">
+                                <div id="mainLEDDiv0" style="position:absolute; top:14px; left:0; width:384px; height:72px; background-color:#000;">
+                                    <div style="position:absolute; top:0; left:0; width:383px; height:72px; background-color:#000;">
                                         <div id="mainLEDRow00" style="position:absolute; top:0; left:0; width:384px; height:24px; overflow:hidden;">
                                             <script>document.getElementById("mainLEDRow00").innerHTML = writeLineHTML(0, 0)</script>
                                         </div>
@@ -49,15 +48,14 @@
                     </div>
                 </div>
                 <!-- 2台め -->
-                <div style="position:absolute; top:20px; left:570px; width:550px;">
+                <div style="position:absolute; top:20px; left:570px; width:469px;">
                     <div id="kyotaiMainDiv1" style="position:absolute; ">
-                        <div style="position:absolute; top:0; left:0; width:500px; height:146px; background-color:#777; ">
-                            <!-- 方面ラベル --><img style="position:absolute; top:0; left:0; width:500px; height:43px;" src="/resource/img/label/title-1.png" alt="" />
-                            <div style="position:absolute; top:43px; left:11px; width:479px; height:95px; background-color:#222;">
-                                <!-- 項目名ラベル --><img style='position:absolute; top:0; left:81px; width:384px; height:14px; ' src='/resource/img/label/header.png' alt='' />
-                                <img style='position:absolute; top:14px; left:0; width:81px; height:96px; ' src='/resource/img/label/order.png' alt='' />
+                        <div style="position:absolute; top:0; left:0; width:419px; height:146px; background-color:#777; ">
+                            <!-- 方面ラベル --><img style="position:absolute; top:0; left:0; width:419px; height:43px;" src="/resource/img/label/title-1.png" alt="" />
+                            <div style="position:absolute; top:43px; left:11px; width:398px; height:95px; background-color:#222;">
+                                <!-- 項目名ラベル --><img style='position:absolute; top:0; left:0; width:384px; height:14px; ' src='/resource/img/label/header.png' alt='' />
                                 <!-- LED描画部 -->
-                                <div id="mainLEDDiv1" style="position:absolute; top:14px; left:81px; width:384px; height:72px; background-color:#000;">
+                                <div id="mainLEDDiv1" style="position:absolute; top:14px; left:0; width:384px; height:72px; background-color:#000;">
                                     <div style="position:absolute; top:0; left:0; width:384px; height:72px; background-color:#000;">
                                         <div id="mainLEDRow10" style="position:absolute; top:0; left:0; width:384px; height:24px; overflow:hidden;">
                                             <script>document.getElementById("mainLEDRow10").innerHTML = writeLineHTML(1, 0)</script>
