resourceフォルダに対して相対パス指定に修正

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="author" content="yoshi yui-Kitamura" />
     <meta name="description" content="西武池袋線秋津駅の発車標をシミュレーション表示するページです" />
 
-    <link rel="stylesheet" href="/resource/style.css" type="text/css">
+    <link rel="stylesheet" href="./resource/style.css" type="text/css">
 
-    <script src="/resource/main.js"></script>
-    <script src="/resource/utility.js"></script>
-    <script src="/resource/imgList.js"></script>
+    <script src="./resource/main.js"></script>
+    <script src="./resource/utility.js"></script>
+    <script src="./resource/imgList.js"></script>
     <script>
         //OS・ユーザエージェントを判別
         judgeUA();
@@ -27,9 +27,9 @@
                 <div style="position:absolute; top:20px; left:20px; width:469px;">
                     <div id="kyotaiMainDiv0" style="position:absolute; ">
                         <div style="position:absolute; top:0; left:0; width:419px; height:146px; background-color:#777; ">
-                            <!-- 方面ラベル --><img style="position:absolute; top:0; left:0; width:419px; height:43px;" src="/resource/img/label/title-0.png" alt="" />
+                            <!-- 方面ラベル --><img style="position:absolute; top:0; left:0; width:419px; height:43px;" src="./resource/img/label/title-0.png" alt="" />
                             <div style="position:absolute; top:43px; left:11px; width:398px; height:95px; background-color:#222;">
-                                <!-- 項目名ラベル --><img style='position:absolute; top:0; left:0; width:384px; height:14px; ' src='/resource/img/label/header.png' alt='' />
+                                <!-- 項目名ラベル --><img style='position:absolute; top:0; left:0; width:384px; height:14px; ' src='./resource/img/label/header.png' alt='' />
                                 <!-- LED描画部 -->
                                 <div id="mainLEDDiv0" style="position:absolute; top:14px; left:0; width:384px; height:72px; background-color:#000;">
                                     <div style="position:absolute; top:0; left:0; width:383px; height:72px; background-color:#000;">
@@ -51,9 +51,9 @@
                 <div style="position:absolute; top:20px; left:570px; width:469px;">
                     <div id="kyotaiMainDiv1" style="position:absolute; ">
                         <div style="position:absolute; top:0; left:0; width:419px; height:146px; background-color:#777; ">
-                            <!-- 方面ラベル --><img style="position:absolute; top:0; left:0; width:419px; height:43px;" src="/resource/img/label/title-1.png" alt="" />
+                            <!-- 方面ラベル --><img style="position:absolute; top:0; left:0; width:419px; height:43px;" src="./resource/img/label/title-1.png" alt="" />
                             <div style="position:absolute; top:43px; left:11px; width:398px; height:95px; background-color:#222;">
-                                <!-- 項目名ラベル --><img style='position:absolute; top:0; left:0; width:384px; height:14px; ' src='/resource/img/label/header.png' alt='' />
+                                <!-- 項目名ラベル --><img style='position:absolute; top:0; left:0; width:384px; height:14px; ' src='./resource/img/label/header.png' alt='' />
                                 <!-- LED描画部 -->
                                 <div id="mainLEDDiv1" style="position:absolute; top:14px; left:0; width:384px; height:72px; background-color:#000;">
                                     <div style="position:absolute; top:0; left:0; width:384px; height:72px; background-color:#000;">
@@ -94,7 +94,7 @@
     </ul>
     <figure>
         <figcaption>使用している画像素材</figcaption>
-        <img src="/resource/img/main.png" alt="表示画像の素材集" style="border:1px solid gray; padding: 3px;">
+        <img src="./resource/img/main.png" alt="表示画像の素材集" style="border:1px solid gray; padding: 3px;">
     </figure>
 </section>
 </main>
