固有faviconを設定

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>西武池袋線 秋津駅 発車標シミュレーター</title>
+    <link rel="icon" href="./resource/img/icon.svg" />
     <meta name="author" content="yoshi yui-Kitamura" />
     <meta name="description" content="西武池袋線秋津駅の発車標をシミュレーション表示するページです" />
 
