update GitHub info

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
     <p>西武池袋線秋津駅のホームに設置されている発車標のシミュレーターです。</p>
     <p>本シミュレータはyoshi様(Twitter<a href="https://twitter.com/rk113">@rk113</a>)に許可をいただき、<a
         href="https://r113.sakura.ne.jp/p/hasshahyo/seibu-ikebukuro/index.html">西武
-        日本信号24ドット(所沢を除く池袋線各駅、下山口、西武球場前ほか)</a>をベースに改造したものです</p>
+        日本信号24ドット(所沢を除く池袋線各駅、下山口、西武球場前ほか)</a>をベースに改造したものです。<br/>
+        <a href="https://github.com/yui-Kitamura/SeibuAkitsuSignBoard">GitHub[yui-Kitamura/SeibuAkitsuSignBoard]</a>で公開しています
+    </p>
     <ul>
         <li>元町・中華街行きは、「元町・中華街」→「渋谷・横浜方面」→「Motomachi-Chukagai」というように「渋谷・横浜方面」も途中で表示されますが、ここでは対応していません。</li>
         <li>本シミュレーターはJavaScript・CSS等が正常に動作するブラウザでご覧いただけます。JavaScriptが動作しない環境では動きません。</li>
