時計表示高さ調整

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <!-- 時計 -->
                 <div id="clocks" style="position:absolute; top:0; left:1315px;">
                     <!-- デジタル -->
-                    <div style="position:absolute; top:5px; left:0; height:102px; width:318px; background-color:#777; ">
-                        <div id="digitClock" style="position:relative; margin:15px; background-color:black; width:calc(100% - 30px); height:calc(100% - 15px);">
+                    <div style="position:absolute; top:5px; left:0; height:87px; width:318px; background-color:#777; ">
+                        <div id="digitClock" style="position:relative; margin:15px; background-color:black; width:calc(100% - 30px); height:72px;">
                             <div id='clockNum' style='position:absolute; left:0; top:0; width:288px; height:72px; overflow:hidden; background-color:#000; z-index:1;' >
                                 <div style='position:absolute; left:0; top:0; width:288px; height:72px; overflow:hidden;' >
                                     <img class='led' style='position:absolute; left:-4640px; top:-0px;' id='currentTime0Img' src='./resource/img/mainx8.png' alt='' />
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                     <!-- アナログ -->
-                    <div style="position:absolute; top:107px; height:260px; width:318px; background-color:#777;">
+                    <div style="position:absolute; top:92px; height:260px; width:318px; background-color:#777;">
                         <canvas id="analogClock" style="margin:15px;background-color:darkgreen; width:calc(100% - 30px); height:calc(100% - 30px); border-radius: 15px;"></canvas>
                     </div>
                 </div>
