HTML<canvas>は、width,heightを属性で与える必要がある

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                     <!-- アナログ -->
                     <div style="position:absolute; top:92px; height:260px; width:318px; background-color:#777;">
-                        <canvas id="analogClock" style="margin:15px;background-color:darkgreen; width:calc(100% - 30px); height:calc(100% - 30px); border-radius: 15px;"></canvas>
+                        <canvas id="analogClock" width="288px" height="230px" style="margin:15px;background-color:darkgreen; border-radius: 15px;"></canvas>
                     </div>
                 </div>
             </div>
