ページ(ブラウザタブ)のフォーカス処理に対応

--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
         <img src="./resource/img/main.png" alt="表示画像の素材集" style="border:1px solid gray; padding: 3px;">
     </figure>
 </section>
+    <script>
+        window.addEventListener('focusin', function () {
+            updateClock(true);
+        });
+    </script>
 </main>
 <footer>
     <h2>変更履歴</h2>
