--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <figure>
         <figcaption>使用している画像素材</figcaption>
         <img src="./resource/img/main.png" alt="表示画像の素材集" style="border:1px solid gray; padding: 3px;">
+        <img src="./resource/img/telop.png" alt="テロップ系素材集" style="border:1px solid gray; padding: 3px;">
     </figure>
 </section>
     <script>
