秒扱いの説明追加

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
         日本信号24ドット(所沢を除く池袋線各駅、下山口、西武球場前ほか)</a>をベースに改造したものです。<br/>
         <a href="https://github.com/yui-Kitamura/SeibuAkitsuSignBoard">GitHub[yui-Kitamura/SeibuAkitsuSignBoard]</a>で公開しています
     </p>
+    <p>毎分15秒列車到着(通過)、45秒発車として描画を更新しています。電光掲示板は10秒ごと、アナログ時計は30秒ごとに描画更新しています</p>
     <ul>
         <li>本シミュレーターはJavaScript・CSS等が正常に動作するブラウザでご覧いただけます。JavaScriptが動作しない環境では動きません。
         <noscript style="color:red">JavaScriptが無効になっています。設定を変更してください</noscript></li>
