自動更新の停止ボタン

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                                 }
                             </script>
                             <input type="button" value="時刻設定" onclick="forceUpdateTime()"><br/>
-                            <input type="button" value="強制設定を解除" style="margin-top:30px" onclick="removeForced()">
+                            <input type="button" value="強制設定を解除" style="margin-top:30px" onclick="removeForced()"><br/>
+                            <input type="button" value="表示自動更新を停止" style="margin-top:10px" onclick="stopAutoUpdate()">
                         </fieldset>
-
                     </form>
                     <form>
                         <fieldset style="width: 100%;padding: 10px;margin:0">
