ダイヤデータを選択可能に

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <input type="button" value="表示自動更新を停止" style="margin-top:10px" onclick="stopAutoUpdate()">
                         </fieldset>
                     </form>
-                    <form>
+                    <form id="diaSelector">
                         <fieldset style="width: 100%;padding: 10px;margin:0">
                             <label><input type="radio" name="year" value="202303" checked/>2023年3月ダイヤ</label><br>
                             <label><input type="radio" name="year" value="202403" disabled/>2024年3月ダイヤ</label>
