--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                     </form>
                     <form id="diaSelector">
                         <fieldset style="width: 100%;padding: 10px;margin:0">
-                            <label><input type="radio" name="year" value="202303" checked/>2023年3月ダイヤ</label><br>
-                            <label><input type="radio" name="year" value="202403" disabled/>2024年3月ダイヤ</label>
+                            <label><input type="radio" name="year" value="202303" />2023年3月ダイヤ</label><br>
+                            <label><input type="radio" name="year" value="202403" checked/>2024年3月ダイヤ</label>
                         </fieldset>
                         <fieldset style="width: 100%;padding: 10px;margin:0">
                             <label><input type="radio" name="diaType" value="weekday" checked/>平日</label>
