fontファイルの採用(AFSDot16GSQR)

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
     <p>毎分15秒列車到着(通過)、45秒発車として描画を更新しています。電光掲示板は10秒ごと、アナログ時計は30秒ごとに描画更新しています</p>
     <p>本シミュレーターはJavaScript・CSS等が正常に動作するブラウザでご覧いただけます。JavaScriptが動作しない環境では動きません。
         <noscript style="color:red">JavaScriptが無効になっています。設定を変更してください</noscript></p>
+    <p class="d16sqf" style="font-weight: bold">ドット打ちされていない文字素材は、株式会社ネットユーコム製「<a href="https://designpocket.jp/font/detail/23197">電光掲示板みたいなフォントAFSゴシック16■R</a>」を使用しています</p>
     <p>
         画像素材は1dot=1pxのドット打ちをした後に、<a href="https://yui-kitamura.github.io/EditDottedPicture/">EditDottedPicture</a>ツールを用いて、
         1px=8px(1px縁取り+内側塗り潰し)に変換した画像を表示に利用しています。（変換ツールのGitHub：<a
