--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="author" content="yoshi yui-Kitamura" />
     <meta name="description" content="西武池袋線秋津駅の発車標をシミュレーション表示するページです" />
 
+    <meta name="og:image" content="https://yui-kitamura.eng.pro/private/railway/sim/seibu/akitsu/resource/thumb.png"/>
+
     <link rel="stylesheet" href="./resource/style.css" type="text/css">
 
     <script src="./resource/main.js"></script>
