--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <meta name="author" content="yoshi yui-Kitamura" />
     <meta name="description" content="西武池袋線秋津駅の発車標をシミュレーション表示するページです" />
 
-    <meta name="og:image" content="https://yui-kitamura.eng.pro/private/railway/sim/seibu/akitsu/resource/thumb.png"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="西武池袋線秋津駅 発車標シミュレーター"/>
+    <meta property="og:image" content="https://yui-kitamura.eng.pro/private/railway/sim/seibu/akitsu/resource/thumb.png"/>
+    <meta property="og:url" content="https://yui-kitamura.eng.pro/private/railway/sim/seibu/akitsu/"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@yuiktmr"/>
+    <meta name="twitter:creator" content="@yuiktmr"/>
 
     <link rel="stylesheet" href="./resource/style.css" type="text/css">
 
